--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -11,9 +11,10 @@
       <div class="form-group">
         <button class="btn btn-outline-info" type="submit">Sign Up</button>
       </div>
+      </form>
       <div class="border-top pt-3">
-      <small class="text-muted">Alredy have an account? <a href="" class="ml-2">Sign In</a></small>
+      <small class="text-muted">Alredy have an account? <a href="{% url 'login' %}" class="ml-2">Sign In</a></small>
       </div>
-    </form>
+
   </div>
 {% endblock %}
