--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,11 +1,17 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 <article class="media content-section">
-  <img class="rounded-circle article-img"src="{{post.author.profile.image.url }}" alt="">
+  <img class="rounded-circle article-img" src="{{post.author.profile.image.url }}" alt="">
   <div class="media-body">
     <div class="article-metadata">
       <a class="mr-2" href="#">{{ post.author }}</a>
       <small class="text-muted">{{ post.date_posted | date:'F d, Y'}}</small>
+      {% if post.author == user %}
+      <div>
+        <a href="{% url 'blog:update' post.id %}" class="btn btn-primary btn-sm mt-1 mb-1">Update</a>
+        <a href="{% url 'blog:delete' post.id %}" class="btn btn-danger btn-sm mt-1 mb-1">Delete</a>
+      </div>
+      {% endif %}
     </div>
     <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
     <p class="article-content">{{ post.content }}</p>
