--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,14 +3,32 @@
 {% for post in posts %}
 <article class="media content-section">
   <img class="rounded-circle article-img"src="{{post.author.profile.image.url }}" alt="">
-  <div class="media-body">
-    <div class="article-metadata">
-      <a class="mr-2" href="{% url 'blog:detail' post.id %}">{{ post.author }}</a>
+
+      <a class="mr-2 media-body
+    article-metadata" href="{% url 'blog:detail' post.id %}">{{ post.author }}</a>
       <small class="text-muted">{{ post.date_posted | date:'F d, Y'}}</small>
-    </div>
+
     <h2 class="article-title">{{ post.title }}</h2>
     <p class="article-content">{{ post.content }}</p>
-  </div>
+
 </article>
+
 {% endfor %}
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
